# Project

./: .gitignore
Common/: CMakeLists.txt
DAL/: CMakeLists.txt  statement.h  unitofwork.cpp
DAL/Connection/: CMakeLists.txt
Parser&Structs/: CMakeLists.txt
Peer/: CMakeLists.txt  abstractstrategy.h  clientcontroller.h  dataaccessor.h  friendsupdatemanager.h
Peer/GUI/: CMakeLists.txt  frienditem.h  friendmodel.h  friendrequestmodel.h  guimanager.h  messageitem.h  messagemodel.h
Server/: CMakeLists.txt
Server/DAL/: client.cpp  dal.h
Server/RequestProcessing/: add_friend_request.cpp  delete__friend_request.cpp  friendship_request.cpp  login_request.cpp  new_user_request.cpp
